--- a/index.html
+++ b/index.html
@@ -3,10 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sneaker Marketplace</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header>
+        <section class="top">
+            <div><img src="image/logo.png" alt="Logo"></div>
+            <a href="index.html"><h2>Home</h2></a>
+            <a href="buy.html"><h2>Buy</h2></a>
+            <a href="sell.html"><h2>Sell</h2></a>
+        </section>
+        <section class="heading">
+            <h1>Welcome to the Sneaker Marketplace</h1>
+        </section>
+    </header>
+
+    <main>
+        <h3>FEATURED SNEAKERS</h3>
+        <div><img src="image/shoes/nike_dunk.png" alt="Nike Dunk"></div>
+        <div><img src="image/shoes/air_jordans.png" alt="Air Jordan"></div>
+        <div><img src="image/shoes/yeezys.png" alt="Yeezy"></div>
+        <h4>Air Jordan</h4>
+        <h4>Nike Dunk</h4>
+        <h4>Yeezy</h4>
+
+        <h3>WHAT CAN YOU DO</h3>
+        <a href="browse.html"><h4>Browse<br>Sneakers</h4></a>
+        <a href="buy.html"><h4>Buy<br>Sneakers</h4></a>
+        <a href="sell.html"><h4>Sell<br>Sneakers</h4></a>
+    </main>
+
+    <footer>
+        <p>2025 Sneaker Marketplace</p>
+    </footer>
 </body>
 </html>
