--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </main>
 
     <footer>
-        <p>2025 Sneaker Marketplace</p>
+        <p>&copy; 2025 Sneaker Marketplace</p>
     </footer>
 </body>
 </html>
