altering html names

--- a/browse.html
+++ b/browse.html
@@ -16,7 +16,7 @@
             <div class="links">
                 <a href="index.html">Home</a>
                 <a href="subpage1.html">Buy'Sell</a>
-                <a href="subpage2.html">Categories</a>
+                <a href="browse.html">Categories</a>
             </div>
         </nav>
     </header>
